[package]
name = "odometer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.31.1"
aws-sdk-dynamodbstreams = "0.31.1"
clap = { version = "4.4.5", features = ["derive"] }
futures = "0.3.28"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4"] }
